refactor: Refactor CSV import services for separation of concern